Changelog
=========

2.2.dev0 - (unreleased)
-----------------------

2.1 - (2015-03-16)
------------------
* Bug fix: use a ISchemaModifier instead of ISchemaExtender to change label for
  the ATBlob content type
  [tiberich #23775]
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install 
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

2.0 - (2015-02-25)
----------------------
* Change: remove Map view, metadata, web services, download and legend tab from
  land items
  [tiberich #23184]
* Bug fix: Updated Manifest file
  [olimpiurob]

1.9 - (2014-09-16)
------------------
* Bug fix: Added Wand in setup.py as a dependency
  [olimpiurob]

1.8 - (2014-05-26)
------------------

1.7 - (2013-12-09)
------------------
* Bug fix: fixed embedding parsing errors when the embed code contains
  multiple sibblings.
  [olimpiurob #17693]
* Feature: added doctests for our content types and our overview page
  [olimpiurob #17345]

1.6 - (2013-11-21)
------------------
* Feature: added configlet for @@overview page
  [robaaoli #17440]
* Feature: added landitems administrative @@overview page
  [robaaoli #17440]

1.5 - (2013-11-14)
------------------
* Bug fix: don't hardcode width, instead set the class=widen 
  to the embeded iframes
  [tiberich #17266]

1.4 - (2013-11-12)
------------------
* Feature: show a loading icon before loading the map
  [tiberich #17338]

1.3 - (2013-11-08)
------------------
* Bug fix: reconfigure iframe width to make the wider
  [tiberich #17266]
* Bug fix: only set width/height if embeding an iframe
  [tiberich #17266]

1.2 - (2013-11-08)
------------------
* Bug fix: make the displayed embeded maps larger
  [tiberich #17266]

1.1 - (2013-11-05)
------------------
* Feature: Added legend field to the LandItem content type
  [tiberiu #16962]

1.0  - (initial release)
------------------------
* Initial release
