@@ -3,6 +3,9 @@ Changelog
 
 2.2.dev0 - (unreleased)
 -----------------------
+* Bug fix: IATBlob can be implemented by Files, not just Images. Avoid error
+  when fiddling schema
+  [tiberich #24102]
 
 2.1 - (2015-03-16)
 ------------------
